fix layout issues

--- a/public/css/ResourceBrowser.css
+++ b/public/css/ResourceBrowser.css
@@ -1,4 +1,8 @@
 
+#ResourceBrowser {
+    padding-left: 8px;
+}
+
 #ResourceBrowser .toolbar {
     margin: 10px;
 }
